# ntfy-notify

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  server.py  test_server.py
.github/workflows/: ci.yml
